# wsjtx-udp

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  README.md  appveyor.yml  default-static.nix  default.nix  flake.nix  illegal-strings.txt  shell.nix  stack.yaml  wsjtx-udp.cabal  wsjtx-udp.nix
.github/workflows/: haskell.yml
demo/: WsjtxDumpUDP.hs  WsjtxToDB.hs
nix/: cabal-env-pkgs.nix  default-haskell.nix  haskell-nix-src.json  haskell.nix  wsjtx-udp.nix
src/WSJTX/: Report.hs
src/WSJTX/UDP/: Client.hs  EncodeQt.hs  NetworkMessage.hs  Server.hs
test/: WsjtxDumpUDP.hs
