name:                wsjtx-udp
synopsis:            WSJT-X UDP protocol
description:
  Utilities for the WSJT-X UDP protocol.
  Encoding and decoding USP packages to binary and JSON and a UDP server.
version:             0.1.2.1
license:             BSD3
license-file:        LICENSE
author:              Marc Fontaine
maintainer:          Marc.Fontaine@gmx.de
category:            ham-radio, wsjtx
homepage:            https://github.com/MarcFontaine/wsjtx-udp
extra-source-files:  README.md
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:     git
  location: git:://github.com/MarcFontaine/wsjtx-udp.git

library
  default-language  : Haskell2010
  ghc-options       : -Wall -fno-warn-orphans
  default-extensions: TemplateHaskell
  build-depends:
      base  >= 4 && < 5
    , bytestring
    , text
    , time
--    , microlens
--    , microlens-th
    , aeson
  if !impl(ghcjs)
    build-depends:
        network  
      , binary
      , binary-parsers

  hs-source-dirs: src
  exposed-modules:
      WSJTX.UDP.NetworkMessage
  if !impl(ghcjs)
     exposed-modules:
         WSJTX.UDP.EncodeQt    
       , WSJTX.UDP.Server

executable wsjtx-dump-udp
  main-is:          WsjtxDumpUDP.hs
  if impl(ghcjs)
    buildable: False
  else
    build-depends:
        base  >= 4 && < 5
      , wsjtx-udp

    ghc-options:      -rtsopts -Wall -O2 -threaded -with-rtsopts=-T
    default-language: Haskell2010
    hs-source-dirs:   test