name:                wsjtx-udp
synopsis:            WSJT-X UDP protocol
description:
  Utilities for the WSJT-X UDP protocol.
  Encoding and decoding of WSJT-X UDP messages a UDP server that listens for messages.
version:             0.5.0.0
license:             BSD3
license-file:        LICENSE
author:              Marc Fontaine
maintainer:          Marc.Fontaine@gmx.de
category:            HAM, radio, WSJT-X
homepage:            https://github.com/MarcFontaine/wsjtx-udp
extra-source-files:  README.md CHANGELOG.md
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:     git
  location: git:://github.com/MarcFontaine/wsjtx-udp.git

library
  default-language  : Haskell2010
  ghc-options       : -Wall -fno-warn-orphans
  default-extensions: TemplateHaskell
  build-depends:      base  >= 4 && < 5
  build-depends:      bytestring < 0.13
  build-depends:      text < 2.2
  build-depends:      time < 1.15
  build-depends:      aeson < 2.3
  build-depends:      network < 3.3
  build-depends:      binary < 0.11

  hs-source-dirs: src
  exposed-modules:
    WSJTX.Report
    WSJTX.UDP.NetworkMessage
    WSJTX.UDP.EncodeQt
    WSJTX.UDP.Server

executable wsjtx-dump-udp
  main-is:          WsjtxDumpUDP.hs
  hs-source-dirs:   demo
  default-language  : Haskell2010
  ghc-options:      -rtsopts -Wall -threaded -with-rtsopts=-T
  build-depends:
        base  >= 4 && < 5
      , bytestring < 0.12
      , network < 3.3
      , aeson < 2.3
      , wsjtx-udp >= 0.5.0.0 && < 0.6

executable wsjtx-to-db
  main-is:          WsjtxToDB.hs
  hs-source-dirs:   demo
  default-language: Haskell2010
  build-depends:
        base  >= 4 && < 5
      , network  < 3.3
      , postgresql-simple < 0.8
      , wsjtx-udp >= 0.5.0.0 && < 0.6
  ghc-options:      -rtsopts -Wall -threaded -with-rtsopts=-T
